
[workspace]
resolver = "2"
members = [
    "pallet/smt",
    "backend",
    "ink-contract/smt",
    "primitives",
]
exclude = [
    "sparse-merkle-tree"
]
[workspace.package]
author = "YanOctavian"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/farcloud-labs/subsmt"
rust-version = "1.75"


[workspace.dependencies]


