
[workspace]
resolver = "2"
members = [
    "pallet/smt",
    "backend",
    "ink-contract/smt",
    "primitives",
]
exclude = [
    "sparse-merkle-tree"
]
[workspace.package]
author = "YanOctavian"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/farcloud-labs/subsmt"
rust-version = "1.75"


[workspace.dependencies]

frame-benchmarking = { version = "32.0.0", default-features = false }
frame-support = { version = "32.0.0",default-features = false}
frame-system = {version = "32.0.0",default-features = false}
sp-core = { version = "32.0.0" }
sp-io = { version = "34.0.0"}
sp-runtime = { version = "35.0.0" }

