
[workspace]
resolver = "2"
members = [
    "pallet/SMT",
    "backend",
    "ink-contract/SMT",
    "primitives",
]
exclude = [
    "sparse-merkle-tree",
    "parity-base"
]
[workspace.package]
author = "YanOctavian"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/farcloud-labs/subsmt"
rust-version = "1.75"


[workspace.dependencies]
getrandom = { version = "0.2.15", features = ["js"]}
frame-benchmarking = { git="https://github.com/paritytech/polkadot-sdk", branch="stable2409", default-features = false }
frame-support = { git="https://github.com/paritytech/polkadot-sdk", branch="stable2409",default-features = false}
frame-system = {git="https://github.com/paritytech/polkadot-sdk", branch="stable2409",default-features = false}
sp-core = { git="https://github.com/paritytech/polkadot-sdk", branch="stable2409", default-features = false }
sp-io = { git="https://github.com/paritytech/polkadot-sdk", branch="stable2409", default-features = false}
sp-runtime = { git="https://github.com/paritytech/polkadot-sdk", branch="stable2409", default-features = false }
parity-db = { git = "https://github.com/paritytech/parity-db.git", branch = "master" }
