[package]
name = "SMT-api"
version = "0.1.0"
author.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex = "0.4.3"
codec = { package = "parity-scale-codec", version = "3.6.1", features = ["derive"], default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"


# [features]
# default = ["std"]

# std = [
#     "hex/std",
#     "codec/std",
#     "serde_json/std",
# ]