[package]
name = "SMT-backend"
version = "0.1.0"
author.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocksdb = { git = "https://github.com/rust-rocksdb/rust-rocksdb", default-features = false, features = ["snappy"] }
sparse-merkle-tree = { path = "../sparse-merkle-tree" }
codec = { package = "parity-scale-codec", version = "3.6.1", features = ["derive"], default-features = false }


[lib]
name = "smt_backend_lib"
path = "src/lib.rs"
