[package]
name = "smt-backend"
version = "0.1.0"
author.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# rocksdb = { git = "https://github.com/rust-rocksdb/rust-rocksdb", default-features = false, features = ["snappy"] }
sparse-merkle-tree = { path = "../sparse-merkle-tree" }
codec = { package = "parity-scale-codec", version = "3.6.1", features = ["derive"], default-features = false }
kvdb-rocksdb = "0.19.0"
pallet-SMT = {path = "../pallet/SMT"}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = { version = "3.0", features = ["hex"] }
ethers = {git = "https://github.com/gakonst/ethers-rs.git"}
actix-web = "4.9.0"
tokio = { version = "1", features = ["signal", "full"] }
flexi_logger = "0.29.6"
log = "0.4.22"
http = "1.1.0"
thiserror = "2.0.3"


[lib]
name = "smt_backend_lib"
path = "src/lib.rs"

[[bin]]
name = "smt"
path = "src/main.rs"

