[package]
name = "smt-backend"
version = "0.1.0"
author.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
codec = { package = "parity-scale-codec", version = "=3.6.9", features = ["derive"], default-features = false }
kvdb-rocksdb = "0.19.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = { version = "3.0", features = ["hex"] }
ethers = {git = "https://github.com/gakonst/ethers-rs.git"}
actix-web = "4.9.0"
tokio = { version = "1", features = ["signal", "full"] }
flexi_logger = "0.29.6"
log = "0.4.22"
http = "1.1.0"
thiserror = "2.0.3"

scale-info = { version = "2.10.0", features = [
	"derive",
] }
sparse-merkle-tree = { path = "../sparse-merkle-tree", features = ["std"]}
smt-primitives = {path = "../primitives"}
hex = "0.4.3"
utoipa = { version = "5.2.0", features = ["actix_extras"] }
utoipa-swagger-ui = { version ="8.0.3", features = [
    "actix-web",
] }
utoipa-actix-web = { version = "0.1.2"}
utoipa-redoc = "5.0.0"

[lib]
name = "smt_backend_lib"
path = "src/lib.rs"

[[bin]]
name = "smt"
path = "src/main.rs"

