[package]
name = "pallet-SMT"
version = "0.1.0"
author.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sparse-merkle-tree = {path = "../../sparse-merkle-tree", default-features = false}

codec = { package = "parity-scale-codec", version = "3.6.1", features = ["derive"], default-features = false }
scale-info = { version = "2.5.0", default-features = false, features = ["derive"] }


# Substrate
frame-benchmarking = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v1.0.0" }
frame-support = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v1.0.0" }
frame-system = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v1.0.0" }

tiny-keccak = { workspace = true }

[dev-dependencies]

[features]
default = ["std"]
std = [
    "sparse-merkle-tree/std",
    "codec/std",
	"scale-info/std",
	"frame-benchmarking/std",
	"frame-support/std",
	"frame-system/std",
#    "tiny-keccak"
]
try-runtime = [ "frame-support/try-runtime" ]
