[package]
name = "pallet-smt"
version = "0.1.0"
author.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]


[dependencies]
codec = { package = "parity-scale-codec", version = "3.6.12", default-features = false, features = [
	"derive",
] }
scale-info = { version = "2.11.1", default-features = false, features = [
	"derive",
] }

# frame deps
frame-benchmarking = { git="https://github.com/paritytech/polkadot-sdk", branch="release-polkadot-v1.13.0", default-features = false, optional = true }
frame-support = { git="https://github.com/paritytech/polkadot-sdk", branch="release-polkadot-v1.13.0", default-features = false }
frame-system = { git="https://github.com/paritytech/polkadot-sdk", branch="release-polkadot-v1.13.0", default-features = false }


# local
primitives = { path = "../../primitives", package = "smt-primitives", default-features = false }

sparse-merkle-tree = {path = "../../sparse-merkle-tree", default-features = false}

[dev-dependencies]
sp-core = { git="https://github.com/paritytech/polkadot-sdk", branch="release-polkadot-v1.13.0" }
sp-io = { git="https://github.com/paritytech/polkadot-sdk", branch="release-polkadot-v1.13.0" }
sp-runtime = { git="https://github.com/paritytech/polkadot-sdk", branch="release-polkadot-v1.13.0" }

[features]
default = ["std"]
runtime-benchmarks = [
	"frame-benchmarking/runtime-benchmarks",
	"frame-support/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
	"sp-runtime/runtime-benchmarks",
]
std = [
	"codec/std",
	"scale-info/std",
	"frame-benchmarking?/std",
	"frame-support/std",
	"frame-system/std",
	# "scale-info/std",
	"sp-core/std",
	"sp-io/std",
	"sp-runtime/std",
	"primitives/std",
	"sparse-merkle-tree/std",
]
try-runtime = [
	"frame-support/try-runtime",
	"frame-system/try-runtime",
	"sp-runtime/try-runtime",
]
