[package]
name = "pallet-smt"
version = "0.1.0"
edition.workspace = true
author.workspace = true
license.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]


[dependencies]
codec = { package = "parity-scale-codec", version = "3.6.9", default-features = false, features = [
	"derive",
] }
scale-info = { version = "2.10.0", default-features = false, features = [
	"derive",
] }

# frame deps
frame-benchmarking = { workspace = true, optional = true,default-features = false }
frame-support = { workspace = true ,default-features = false}
frame-system = {workspace = true ,default-features = false}
# getrandom = { version = "0.2", features = ["js"], default-features = false }

# local
primitives = { path = "../../primitives", package = "smt-primitives", default-features = false }

[dev-dependencies]
sp-core = { workspace = true }
sp-io = { workspace = true}
sp-runtime = { workspace = true }
smt-backend = {path = "../../backend"}

[features]
default = ["std"]
runtime-benchmarks = [
	"frame-benchmarking/runtime-benchmarks",
	"frame-support/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
	"sp-runtime/runtime-benchmarks",
]
std = [
	# "getrandom/std",
	"codec/std",
	"scale-info/std",
	"frame-benchmarking?/std",
	"frame-support/std",
	"frame-system/std",
	"sp-core/std",
	"sp-io/std",
	"sp-runtime/std",
	"primitives/std",
]
try-runtime = [
	"frame-support/try-runtime",
	"frame-system/try-runtime",
	"sp-runtime/try-runtime",
]
